index.jsp 텍스트 수정

--- a/What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.component
+++ b/What_Do_I_Sell_Today/.settings/org.eclipse.wst.common.component
@@ -14,12 +14,10 @@
                 		
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                		
-        
-        <property name="java-output-path" value="target/classes"/>
                         
         
         <property name="context-root" value="biz"/>
+        <property name="java-output-path" value="/What_Do_I_Sell_Today/target/classes"/>
                 	
     
     </wb-module>
